--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ repository: hrc2/hrc2.github.io
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : the human-robot collaboration and companionship lab
-tagline: The Human-Robot Collaboration and Companionship (Hoffman) Lab
+title : human-robot collaboration & companionship lab
+tagline: The Human-Robot Collaboration and Companionship (Hoffman) Lab at Cornell
 institution:
   url: http://www.cornell.edu
   name: Cornell University 
