Projects now have excerpt

--- a/_config.yml
+++ b/_config.yml
@@ -178,3 +178,10 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+defaults:
+  -
+    scope: 
+      path: "projects"
+    values:
+      excerpt_separator: <!--more-->
