--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : google
+    provider : false
     google : 
       tracking_id : 'UA-62008526-1'
     getclicky :
